--- a/src/CQRSBabelTests/project.json
+++ b/src/CQRSBabelTests/project.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "xunit": "2.1.0",
     "xunit.runner.dnx": "2.1.0-rc1-build204",
-    "xunit.runner.visualstudio": "2.1.0"
+    "xunit.runner.visualstudio": "2.1.0",
+    "CQRSBabel": ""
   }
 }
