--- a/src/CQRSBabel/project.json
+++ b/src/CQRSBabel/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "1.0.0-beta-1",
   "description": "CQRSBabel Class Library",
   "authors": [ "Daniel Ferreira Marques" ],
   "tags": [ "" ],
