--- a/src/CQRSBabel/project.json
+++ b/src/CQRSBabel/project.json
@@ -7,15 +7,9 @@
   "licenseUrl": "",
 
   "frameworks": {
-    "net35": { },
-    "net451": { },
-    "dotnet5.4": {
+    "net35": {
       "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Collections": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Threading": "4.0.11-beta-23516"
+        "System.Web": "1.0.0-*"
       }
     }
   }
