--- a/src/CQRSBabelTests/project.json
+++ b/src/CQRSBabelTests/project.json
@@ -6,8 +6,7 @@
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "dnx451": { },
-    "dnxcore50": { }
+    "dnx451": { }
   },
   "commands": {
     "test": "xunit.runner.dnx"
