--- a/src/CQRSBabelTests/project.json
+++ b/src/CQRSBabelTests/project.json
@@ -6,15 +6,21 @@
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "dnx451": { }
+    "dnx451": {
+      "dependencies": {
+      },
+      "frameworkAssemblies": {
+        "System.ComponentModel.DataAnnotations": "4.0.0.0"
+      }
+    }
   },
   "commands": {
     "test": "xunit.runner.dnx"
   },
   "dependencies": {
+    "CQRSBabel": "1.0.9-*",
     "xunit": "2.1.0",
     "xunit.runner.dnx": "2.1.0-rc1-build204",
-    "xunit.runner.visualstudio": "2.1.0",
-    "CQRSBabel": ""
+    "xunit.runner.visualstudio": "2.1.0"
   }
 }
