--- a/src/CQRSBabel/CQRSBabel.csproj
+++ b/src/CQRSBabel/CQRSBabel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E140C249-0377-401C-854F-D22A2D0D6690}</ProjectGuid>
+    <ProjectGuid>{48F34399-35F4-47C1-8914-16BE229DB2E3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CQRSBabel.TinyIoC</RootNamespace>
-    <AssemblyName>CQRSBabel.TinyIoC</AssemblyName>
+    <RootNamespace>CQRSBabel</RootNamespace>
+    <AssemblyName>CQRSBabel</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,45 +35,29 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>cqrsbabel.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Handler.cs" />
+    <Compile Include="BaseRequest.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="IHandler.cs" />
+    <Compile Include="IIoC.cs" />
+    <Compile Include="IMessengerHub.cs" />
+    <Compile Include="IProxy.cs" />
     <Compile Include="IRequest.cs" />
-    <Compile Include="Proxy.cs" />
-    <Compile Include="Request.cs" />
-    <Compile Include="TinyIoCMessengerHub.cs" />
-    <Compile Include="IoC.cs" />
+    <Compile Include="MessengerHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubscriptionErrorHandler.cs" />
-    <Compile Include="TinyIoC.cs" />
-    <Compile Include="TinyIoCAspNetExtensions.cs" />
-    <Compile Include="TinyMessenger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cqrsbabel.snk" />
-    <None Include="CQRSBabel.TinyIoC.nuspec" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CQRSBabel\CQRSBabel.csproj">
-      <Project>{48f34399-35f4-47c1-8914-16be229db2e3}</Project>
-      <Name>CQRSBabel</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)tools\nuget.exe" pack "$(ProjectPath)" &amp; move /Y  *.nupkg "$(SolutionDir)artifacts\bin\CQRSBabel\Debug"</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
