Created nupkg for CQRSBabel project

--- a/src/CQRSBabel.TinyIoC/CQRSBabel.TinyIoC.csproj
+++ b/src/CQRSBabel.TinyIoC/CQRSBabel.TinyIoC.csproj
@@ -72,7 +72,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)tools\nuget.exe" pack "$(ProjectPath)" &amp; move /Y  *.nupkg "$(SolutionDir)artifacts\bin\CQRSBabel\Debug"</PostBuildEvent>
+    <PostBuildEvent>"$(SolutionDir)tools\nuget.exe" pack "$(ProjectPath)" &amp; move /Y  *.nupkg "$(SolutionDir)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
