--- a/src/CQRSBabel/CQRSBabel.csproj
+++ b/src/CQRSBabel/CQRSBabel.csproj
@@ -58,6 +58,9 @@
     <None Include="cqrsbabel.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir)tools\nuget.exe" pack "$(ProjectPath)" &amp; move /Y  *.nupkg "$(SolutionDir)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
